@@ -1,3 +1,8 @@
+2015-06-02 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_s390-cpu.c, lib/jit_s390-fpu.c, lib/jit_s390.c:
+	Add base support to jit vararg functions to the s390 backend.
+
 2015-06-01 Paulo Andrade <pcpa@gnu.org>
 
 	* lib/jit_arm-cpu.c, lib/jit_arm-swf.c, lib/jit_arm-vfp.c,
